client/flip/src/compononents/common/SelectedDeck/SelectedDeck.module.css
@import url('../../../index.css');

.selectedDeckContainer {
    width: 80%;
    height: 100%;
    display: flex;
    flex-direction: column;
    z-index: 0;
    align-items: center;
}

.selectedDeck {
    height: 400px;
    width: 700px;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    gap: 20px;
    align-items: center;
    background: var(--action-blue);
    box-shadow: 3px 3px 6px  black;
    margin-top: 30px;
    position: relative;
    z-index: 0;
}

.selectedDeckHeader {
    width: 100%;
    display: flex;
    align-items: center;
    height: 91px;
    z-index: 2;
    border-bottom: solid 2px var(--card-pink);
    text-align: center;
    margin-bottom: 10px;
    justify-content: flex-end;
}

.spacer {
    flex: 1 0 15%;
}

.header {
    flex: 1 0 70%;
    font-size: 40px;
    color: var(--background-yellow);
    z-index: 2;
}

.icon {
    flex: 1 0 15%;
    color: var(--background-yellow);
    z-index: 2;
}

.icon:hover {
    cursor: pointer;
}

.greyLines {
    position: absolute;
    top: 131px;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    gap: 40px;
    z-index: 2;
}

.greyLine {
    width: 100%;
    color: var(--pencil-gray);
    background: var(--pencil-gray);
    border: solid .5px var(--pencil-gray);
    opacity: .2;
}

.deckStats {
    font-size: 24px;
    color: var(--background-yellow);
    z-index: 2;
    display: flex;
    flex-direction: column;
    width: 80%;
}

.statWrap {
    display: flex;
    justify-content: space-between;
    height: 50px;
}

.stat {
    line-height: 30px;
}

.line {
    width: 100%;
    background: var(--card-pink);
    border: solid 1.5px var(--card-pink);
}

.actions {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    z-index: 2;
}

.button {
    outline: none;
    border: none;
    flex: 1 0 50%;
    padding: 20px;
    font-size: 60px;
    background: transparent;
    font-family: var(--logo-font);
}

.editBtn {
    color: var(--pencil-gray);
}

.editBtn:hover {
    color: var(--background-yellow);
    cursor: pointer;
    font-weight: 600;
    font-size: 54;
}

.studyBtn {
    color: var(--card-green);
}

.studyBtn:hover {
    cursor: pointer;
    font-weight: 600;
    font-size: 54;
    color: var(--create-card-green);
}

.returnHome {
    z-index: 2;
    display: flex;
    justify-content: center;
}

.returnHomeLink {
    font-family: var(--text-font);
    font-size: 30px;
    opacity: .7;
    background-color: var(--background-yellow);
    color: var(--card-purple);
}

.returnHomeLink:hover {
    opacity: 1;
    font-weight: 600;
}

